# Nao-Keyboard-Teleoperation

./: README.md
nao_teleop_keyboard/: CMakeLists.txt  package.xml
nao_teleop_keyboard/launch/: teleop_keyboard.launch
nao_teleop_keyboard/src/: teleop_nao_keyboard.h  teleop_nao_keyboard_node.cpp
