<?xml version="1.0"?>
<package>
  <name>nao_teleop_keyboard</name>
  <version>0.0.0</version>
  <description>The nao_teleop_keyboard package</description>
  
  <author>Nektarios Sfiris</author>
  <maintainer email="lolis1995@gmail.com">Nektarios Sfiris</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>naoqi_bridge_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>naoqi_bridge_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
